--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,12 @@
 @tailwind utilities;
 
 body {
-  margin: 40px 20px 0px 20px;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fff385;
 }
 
 code {
